--- a/views/team.erb
+++ b/views/team.erb
@@ -6,7 +6,13 @@
  </head>
  <body>
  
-
+   <h1>Team Name: <%= @name %></h1>
+   <h2>Coach: <%= @coach %></h2>
+   <h2>Point Guard: <%= @point_guard %></h2>
+   <h2>Shooting Guard: <%= @shooting_guard %></h2>
+   <h2>Small Forward: <%= @small_forward %></h2>
+   <h2>Power Forward: <%= @power_forward %></h2>
+   <h2>Center: <%= @center %></h2>
 
  </body>
 </html>
